--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+application-description=@project.description@
+application-version=@project.version@
+
 spring.datasource.url=${COMPANY_DATASOURCE_URL}
 spring.datasource.username=${COMPANY_DATASOURCE_USER}
 spring.datasource.password=${COMPANY_DATASOURCE_PASSWORD}
